# argopt

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENCE  MANIFEST.in  Makefile  README.rst  argopt.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
argopt/: __init__.py  _argopt.py  _docopt.py  _utils.py  _version.py
argopt/tests/: test_argopt.py  test_utils.py  tests_argopt.py
examples/: demo_advanced.py  demo_basic.py  demo_basic_docopt.py  demo_gooey.py  eg.py
tests/: tests_argopt.py  tests_utils.py
