[metadata]
name=argopt
url=https://github.com/casperdcl/argopt
project_urls=
    Changelog=https://github.com/casperdcl/argopt/releases
    Documentation=https://github.com/casperdcl/argopt/#argopt
license=MPL 2.0
license_file=LICENCE
description=doc to argparse driven by docopt
long_description=file: README.rst
long_description_content_type=text/x-rst
author=Casper da Costa-Luis
author_email=casper.dcl@physics.org
keywords=docopt, argparse, doc, docstring, commandline, argument, option, optional, parameter, positional, console, terminal, command line, CLI, UI, gui, gooey
platforms=any
provides=argopt
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: MS-DOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities
[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
install_requires=
    argparse; python_version == "2.6"
python_requires=>=2.6, !=3.0.*, !=3.1.*
tests_require=nose; flake8; coverage
packages=find:
[options.extras_require]
dev=py-make>=0.1.0; twine; wheel
[bdist_wheel]
universal=1

[flake8]
# TODO: fix & remove C405,C407 after py26 deprecation
extend-ignore=E203,P1,C405,C407
max_line_length=88
exclude=.eggs,.tox,build,dist,.git,__pycache__

[isort]
profile=black
known_first_party=argopt,tests

[coverage:run]
branch=True
include=argopt/*
omit=
    argopt/_docopt.py
relative_files=True
[coverage:report]
show_missing=True
