[metadata]
name=argopt
url=https://github.com/casperdcl/argopt
project_urls=
    Changelog=https://github.com/casperdcl/argopt/releases
    Documentation=https://github.com/casperdcl/argopt/#argopt
licence=MPL 2.0
license_file=LICENCE
description=doc to argparse driven by docopt
long_description=file: README.rst
long_description_content_type=text/x-rst
author=Casper da Costa-Luis
author_email=casper.dcl@physics.org
keywords=docopt, argparse, doc, docstring, commandline, argument, option, optional, parameter, positional, console, terminal, command line, CLI, UI, gui, gooey
platforms=any
provides=argopt
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: MS-DOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities
[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
python_requires=>=3.7
install_requires=
tests_require=tox
packages=find:
[options.extras_require]
dev=py-make>=0.1.0; twine; wheel
[options.packages.find]
exclude=tests

[flake8]
max_line_length=99
extend-ignore=E261
exclude=.eggs,.tox,build,dist,.git,__pycache__

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False
blank_line_before_nested_class_or_def=False

[isort]
line_length=99
known_first_party=argopt,tests

[tool:pytest]
timeout=30
log_level=INFO
python_files=tests_*.py
testpaths=tests
addopts=-v --tb=short -rxs -W=error --durations=0 --durations-min=0.1

[coverage:run]
branch=True
omit=
    argopt/_docopt.py
relative_files=True
[coverage:report]
show_missing=True
